--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <title>The Dish</title>
+  <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
 <body>
 
