integrated suggestion HTML and review dish first page and open camera

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
   <title>The Dish</title>
   <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 </head>
-<body>
+<body style="background-color:transparent">
 
 <!-- The nav bar that will be updated as we navigate between views. -->
 <!-- <ion-nav-bar class="bar-stable">
