--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,9 @@
   <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
   <title>The Dish</title>
   <link href="http://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCQU36oZjlxKSuAZkF3THXWJVWbar6pWIE&libraries=places"></script>
 </head>
-<body style="background-color:transparent">
+<body>
 
 <!-- The nav bar that will be updated as we navigate between views. -->
 <!-- <ion-nav-bar class="bar-stable">
